--- a/index.html
+++ b/index.html
@@ -1,19 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<title>My static Space</title>
-		<link rel="stylesheet" href="style.css" />
-	</head>
-	<body>
-		<div class="card">
-			<h1>Welcome to your static Space!</h1>
-			<p>You can modify this app directly by editing <i>index.html</i> in the Files and versions tab.</p>
-			<p>
-				Also don't forget to check the
-				<a href="https://huggingface.co/docs/hub/spaces" target="_blank">Spaces documentation</a>.
-			</p>
-		</div>
-	</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Arpeggiator</title>
+        <link rel="stylesheet" href="styles.css">
+
+        <!-- Primary Meta Tags -->
+        <meta name="title" content="Arpeggiator">
+        <meta name="description" content="hand-controlled arp, drum machine, real-time visualizer">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://collidingscopes.github.io/arpeggiator/">
+        <meta property="og:title" content="Arpeggiator">
+        <meta property="og:description" content="hand-controlled arp, drum machine, real-time visualizer">
+        <meta property="og:image" content="https://raw.githubusercontent.com/collidingScopes/arpeggiator/main/assets/siteOGImage.webp">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://collidingscopes.github.io/arpeggiator/">
+        <meta property="twitter:title" content="Arpeggiator">
+        <meta property="twitter:description" content="hand-controlled arp, drum machine, real-time visualizer">
+        <meta property="twitter:image" content="https://raw.githubusercontent.com/collidingScopes/arpeggiator/main/assets/siteOGImage.webp">
+
+        <script defer src="https://cloud.umami.is/script.js" data-website-id="eb59c81c-27cb-4e1d-9e8c-bfbe70c48cd9"></script>
+        <script type="importmap">
+            {
+                "imports": {
+                    "three": "https://esm.sh/three@0.161.0?dev",
+                    "three/": "https://esm.sh/three@0.161.0&dev/"
+                }
+            }
+        </script>
+    </head>
+    <body style="width: 100%; height: 100%; overflow: hidden; margin: 0;">
+        <div id="renderDiv" style="width: 100%; height: 100%; margin: 0;">
+
+            <span id="info-text">raise your hands to raise the roof</span>
+            <div id="social-links" class="text-box">
+                <a href="https://www.x.com/measure_plan/" target="_blank">> Twitter</a><br>
+                <a href="https://www.instagram.com/stereo.drift/" target="_blank">> Instagram</a><br>
+                <a href="https://youtube.com/@funwithcomputervision" target="_blank">> Youtube</a>
+            </div>
+            <div id="coffee-link" class="text-box">
+                <a href="https://buymeacoffee.com/stereodrift" target="_blank">Buy me a coffee 💛</a>
+            </div>
+            <div id="logo-container" class="text-box">
+                <span id="logo">🪬</span><br>
+                <a href="https://funwithcomputervision.com/" target="_blank">code & tutorials here</a>
+            </div>
+
+        </div>
+        <script type="module" src="main.js"></script>
+    </body>
 </html>
