Remove DrumManager and drum assets

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                 </div>
             </div>
 
+            <!-- Main Info Text -->
+            <span id="info-text">use gestures to control playback • click 🎵 for playlist</span>
+
         </div>
         <script type="module" src="main.js"></script>
     </body>
