--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <meta property="twitter:image" content="https://raw.githubusercontent.com/collidingScopes/arpeggiator/main/assets/siteOGImage.webp">
 
         <script defer src="https://cloud.umami.is/script.js" data-website-id="eb59c81c-27cb-4e1d-9e8c-bfbe70c48cd9"></script>
+        
+        <!-- Load MediaPipe Hands -->
+        <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4.1646424915/hands.js"></script>
+        
         <script type="importmap">
             {
                 "imports": {
