Fix Two-Hand Detection and Gesture Controls

--- a/index.html
+++ b/index.html
@@ -90,6 +90,31 @@
 
                 <!-- Sidebar Footer -->
                 <div class="sidebar-footer">
+                    <div class="gesture-help">
+                        <h4>Gesture Controls</h4>
+                        <div class="gesture-item">
+                            <span class="gesture-icon">🤚</span>
+                            <div class="gesture-text">
+                                <strong>Left Hand:</strong> Volume Control<br>
+                                <small>Raise/lower hand to adjust volume</small>
+                            </div>
+                        </div>
+                        <div class="gesture-item">
+                            <span class="gesture-icon">👌</span>
+                            <div class="gesture-text">
+                                <strong>Right Hand:</strong> Playback Control<br>
+                                <small>Pinch: Play/Pause • High: Next • Low: Previous</small>
+                            </div>
+                        </div>
+                        <div class="gesture-item">
+                            <span class="gesture-icon">⌨️</span>
+                            <div class="gesture-text">
+                                <strong>Press H</strong> for full help<br>
+                                <small>Shows all keyboard shortcuts</small>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <div id="logo-container" class="text-box">
                         <span id="logo">🪬</span><br>
                         <a href="https://funwithcomputervision.com/" target="_blank">code & tutorials here</a>
@@ -108,7 +133,7 @@
             </div>
 
             <!-- Main Info Text -->
-            <span id="info-text">use gestures to control playback • click 🎵 for playlist</span>
+            <span id="info-text">show both hands to camera • left=volume, right=playback • press H for help</span>
 
         </div>
         <script type="module" src="main.js"></script>
