Update Buy Me a Coffee Link

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     </div>
                     
                     <div id="coffee-link" class="text-box">
-                        <a href="https://buymeacoffee.com/stereodrift" target="_blank">Buy me a coffee 💛</a>
+                        <a href="https://buymeacoffee.com/gmzay" target="_blank">Buy me a coffee 💛</a>
                     </div>
                 </div>
             </div>
